--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,6 +4,8 @@ repos:
     hooks:
       - id: check-added-large-files
       - id: check-ast
+      - id: check-byte-order-marker
+      - id: check-builtin-literals
       - id: check-case-conflict
       - id: check-docstring-first
       - id: check-merge-conflict
@@ -13,6 +15,7 @@ repos:
       - id: detect-private-key
       - id: end-of-file-fixer
       - id: fix-byte-order-marker
+      - id: mixed-line-ending
       - id: trailing-whitespace
   - repo: https://github.com/psf/black
     rev: 23.9.1
@@ -27,3 +30,8 @@ repos:
     hooks:
       - id: ruff
         args: ["--ignore=E501,E741"]
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: v3.0.3
+    hooks:
+      - id: prettier
+        types_or: [javascript]
