--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,3 +12,6 @@ max-line-length = "88"
 [tool.ruff]
 line-length = 88
 target-version = "py310"
+select = ["C", "E", "F", "W"]
+ignore = ["C901", "E501", "E741"]
+show-source = true
