Add/update solutions on January 19th, 2024

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,7 +25,7 @@ repos:
     rev: 7.0.0
     hooks:
       - id: flake8
-        args: ["--ignore=E203,E501,W503,E741"]
+        args: ["--ignore=E203,E501,W503"]
   - repo: https://github.com/PyCQA/isort
     rev: 5.13.2
     hooks:
