--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,6 @@ max-line-length = "88"
 [tool.ruff]
 line-length = 88
 target-version = "py310"
-select = ["C", "E", "F", "W"]
-ignore = ["C901", "E501", "E741"]
+select = ["B", "C", "E", "F", "I", "Q", "S", "W"]
+ignore = ["C901", "S101"]
 show-source = true
