--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ max-line-length = "88"
 [tool.ruff]
 line-length = 88
 target-version = "py310"
+output-format = "full"
+
+[tool.ruff.lint]
 select = ["B", "C", "E", "F", "I", "Q", "S", "W"]
-ignore = ["C901", "S101"]
-show-source = true
+ignore = ["B019", "C901", "S101"]
