--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,6 +16,13 @@ repos:
       - id: fix-byte-order-marker
       - id: mixed-line-ending
       - id: trailing-whitespace
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.11.5
+    hooks:
+      - id: ruff
+        args: ["--config=./pyproject.toml"]
+      - id: ruff-format
+        args: ["--config=./pyproject.toml"]
   - repo: https://github.com/psf/black
     rev: 25.1.0
     hooks:
@@ -29,11 +36,6 @@ repos:
     rev: 6.0.1
     hooks:
       - id: isort
-  - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.11.4
-    hooks:
-      - id: ruff
-        args: ["--config=./pyproject.toml"]
   - repo: https://github.com/asottile/pyupgrade
     rev: v3.19.1
     hooks:
