Add solutions on May 20th, 2025

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,8 +23,8 @@ repos:
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.11.10
     hooks:
-      - id: ruff
-        args: ["--config=./pyproject.toml"]
+      - id: ruff-check
+        args: ["--fix", "--config=./pyproject.toml"]
       - id: ruff-format
         args: ["--config=./pyproject.toml"]
   - repo: https://github.com/psf/black
