--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
   "name": "leetcode-solutions",
-  "private": true,
   "version": "0.1.0",
+  "private": true,
   "description": "LeetCode solutions with minimal ESLint setup",
   "license": "MIT",
   "scripts": {
+    "format": "prettier \"**/*.js\" --write",
     "lint": "eslint \"**/*.js\"",
     "lint:fix": "eslint \"**/*.js\" --fix"
   },
   "devDependencies": {
-    "eslint": "^9.14.0",
     "@eslint/js": "^9.14.0",
+    "eslint": "^9.14.0",
+    "eslint-config-prettier": "^10.1.0",
     "globals": "^16.5.0",
-    "eslint-config-prettier": "^10.1.0"
+    "prettier": "^3.6.2"
   }
 }
