Update solutions on December 1st, 2025

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -43,6 +43,11 @@ repos:
       - id: isort
   - repo: local
     hooks:
+      - id: ty
+        name: ty
+        language: system
+        entry: ty check
+        args: ["."]
       - id: eslint
         name: eslint
         language: system
