Add/update solutions on January 4th, 2026

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ root = ["./"]
 invalid-argument-type = "ignore"
 invalid-assignment = "ignore"
 invalid-return-type = "ignore"
-non-subscriptable = "ignore"
+not-subscriptable = "ignore"
 not-iterable = "ignore"
 possibly-missing-attribute = "ignore"
 unresolved-import = "ignore"
